hphp/hack/test/typecheck/higher_kinded_types/alias_with_implicit_constraints_unsupported2.php.exp
File "alias_with_implicit_constraints_unsupported2.php", line 18, characters 20-41:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "alias_with_implicit_constraints_unsupported2.php", line 13, characters 6-27:
  Definition is here
File "alias_with_implicit_constraints_unsupported2.php", line 18, characters 20-41:
The type WithImplicitConstraint implicitly imposes constraints on its type parameters. Therefore, it cannot be used as a higher-kinded type at this time. (Typing[4456])
  File "alias_with_implicit_constraints_unsupported2.php", line 13, characters 6-27:
  The definition of WithImplicitConstraint is here.
  File "alias_with_implicit_constraints_unsupported2.php", line 11, characters 24-31:
  The definition of WithImplicitConstraint relies on TakesNum and the constraints that TakesNum imposes on its type parameter T1 then become implicit constraints on the type parameter T4 of WithImplicitConstraint.
